# learn_vulkan

./: Cargo.toml  build.rs
shaders/: colored_triangle.vert  gradient.comp  triangle.frag  triangle.vert
src/: frame.rs  main.rs  vk_descriptors.rs
src/lv/: Image.rs  command_buffer.rs  command_pool.rs  debug_messenger_struct.rs  device.rs  fence.rs  instance.rs  lv_struct.rs  mod.rs  pipeline.rs  queue.rs  renderpass.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  traits.rs
src/lv/descriptors/: descriptor_table.rs  mod.rs  resource_table.rs
src/utility/: init.rs  mod.rs  tools.rs
