[package]
name = "learn_vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
log = "0.4.20"

[build-dependencies]
shaderc = { version = "0.8.2", optional = true, features = ["build-from-source"] }

[features]
default = ["shaderc"]

[dependencies.ash]
version = "0.37.3+1.3.251"
features = ["linked"]

[dependencies.winit]
version = "0.29.3"
default-features = false
features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]